--- a/duyi/1.html
+++ b/duyi/1.html
@@ -6,7 +6,9 @@
 </head>
 <body>
   
-  <div id="app"></div>
+  <div id="app">
+    <h1>hello 1111</h1>
+  </div>
 
   <script src="../libs/vue.js"></script>
   <script>
