--- a/index.html
+++ b/index.html
@@ -23,8 +23,11 @@
     data:{
       mytitle:'hello vue 导航',
       orgs:[
-        {id:1,name:"黑马",path:"heima/2.html"},
-        {id:2,name:"渡一",path:"duyi/1.html"},
+        {id:1,name:"黑马测试",path:"heima/1.html"},
+        {id:2,name:"黑马分支",path:"heima/2.html"},
+        {id:3,name:"黑马简单运算",path:"heima/3.html"},
+        {id:4,name:"黑马methods",path:"heima/4.html"},
+        {id:10,name:"渡一测试",path:"duyi/1.html"},
       ],
     }
   })
