--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 </body>
 <script src="./libs/vue.js"></script>
 <script>
+  Vue.config.productionTip = false
   const vm = new Vue({
     el:'#app',
     data:{
