--- a/sgg/1.html
+++ b/sgg/1.html
@@ -3,11 +3,26 @@
 
 <head>
   <meta charset='UTF-8'>
-  <title>OKOK</title>
+  <title>sgg</title>
 </head>
 
 <body>
-
+  <div id="app">
+    <h2>{{title}}</h2>
+  </div>
 </body>
+<script>
+  Vue.config.productionTip = false
+  const app = new Vue({
+    el:'#app',
+    data:{
+      title:"HELLO上鬼谷"
+    },
+    methods:{
+      
+    }
+  })
+
+</script>
 
 </html>
