--- a/sgg/1.html
+++ b/sgg/1.html
@@ -11,17 +11,20 @@
     <h2>{{title}}</h2>
   </div>
 </body>
+<script src="../libs/vue.js"></script>
 <script>
   Vue.config.productionTip = false
   const app = new Vue({
-    el:'#app',
-    data:{
-      title:"HELLO上鬼谷"
+    el: '#app',
+    data: {
+      title: "HELLO上鬼谷"
     },
-    methods:{
-      
+    methods: {
+
     }
   })
+
+  
 
 </script>
 
