--- a/sgg/1.html
+++ b/sgg/1.html
@@ -9,6 +9,9 @@
 <body>
   <div id="app">
     <h2>{{title}}</h2>
+    <ul>
+      <li v-for="(item,index) in pages"><a :href="item.path" :key="item.id">{{item.text}}</a></li>
+    </ul>
   </div>
 </body>
 <script src="../libs/vue.js"></script>
@@ -17,7 +20,19 @@
   const app = new Vue({
     el: '#app',
     data: {
-      title: "HELLO上鬼谷"
+      title: "HELLO上鬼谷",
+      pages:[
+        {
+          id:1,
+          text:"计算属性测试",
+          path:"2.html"
+        },
+        {
+          id:2,
+          text:"侦测器测试",
+          path:"3.html"
+        },
+      ]
     },
     methods: {
 
