--- a/sgg/1.html
+++ b/sgg/1.html
@@ -32,6 +32,16 @@
           text:"侦测器测试",
           path:"3.html"
         },
+        {
+          id:3,
+          text:"非单文件测试",
+          path:"4.html"
+        },
+        {
+          id:4,
+          text:"非单文件嵌套",
+          path:"5.html"
+        },
       ]
     },
     methods: {
